Utiliza ResponseEntity + minor lint