@@ -4,12 +4,13 @@ import br.univille.cofrinho.domains.priority.PrioridadeDTO;
 import br.univille.cofrinho.domains.priority.PrioridadeMapper;
 import br.univille.cofrinho.domains.priority.PrioridadeService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/prioridade")
@@ -19,11 +20,13 @@ public class PrioridadeController {
 	private PrioridadeService prioridadeService;
 
 	@GetMapping
-	public List<PrioridadeDTO> obterTodasPrioridades() {
-		return prioridadeService.obterTodasPrioridades()
+	public ResponseEntity<List<PrioridadeDTO>> listarTodasAsPrioridades() {
+		List<PrioridadeDTO> prioridades = prioridadeService.obterTodasAsPrioridades()
 			.stream()
 			.map(PrioridadeMapper::paraDTO)
-			.collect(Collectors.toList());
+			.toList();
+
+		return new ResponseEntity<>(prioridades, HttpStatus.OK);
 	}
 
 }
